Varios cambios que extienden la experiencia de la reforma de santa fe

--- a/views/email/email.twig
+++ b/views/email/email.twig
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Recuperar contraseña - La Reforma Santa Fe</title>
+    <title>Registro - La Reforma Santa Fe</title>
     <style>
       @media only screen and (max-width: 620px) {
         table[class=body] h1 {
@@ -96,7 +96,7 @@
           <div class="content" style="box-sizing: border-box; display: block; Margin: 0 auto; max-width: 580px; padding: 10px;">
 
             <!-- START CENTERED WHITE CONTAINER -->
-            <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Este email fue enviado porque ha solicitado reestablecer su contraseña en la plataforma de participación de La Reforma Santa Fe</span>
+            <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Este email fue enviado porque se ha registrado en la plataforma de participación de La Reforma Santa Fe</span>
             <table class="main" style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; background: #ffffff; border-radius: 3px; width: 100%;" width="100%">
 
               <!-- START MAIN CONTENT AREA -->
@@ -106,7 +106,9 @@
                     <tr>
                       <td style="font-family: sans-serif; font-size: 12px; vertical-align: top;" valign="top">
                         <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><img src="http://lareformasantafe.digital/participa/public/assets-ref/img/sf-ref-logo-mail.png" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; width: 150px;" alt="" width="150"></p>
-                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Le enviamos el siguiente email porque ha solicitado reestablecer su contraseña. Haga clic en el siguiente botón para comenzar el proceso de reestablecimiento de su contraseña.</p>
+                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">¡Te damos la bienvenida a La Reforma Santa Fe!
+                        </p>
+                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">¡Gracias por tu interés en participar! Para comenzar, necesitamos verificar tu cuenta. Para eso, hace clic en el siguiente botón y poder comenzar a participar en nuestra nueva constitución</p>
                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; box-sizing: border-box; width: 100%;" width="100%">
                           <tbody>
                             <tr>
@@ -115,7 +117,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="font-family: sans-serif; font-size: 12px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #3498db;" valign="top" align="center" bgcolor="#3498db">
-                                        <a href="{{ baseUrl(false) }}{{ urlFor('shwReiniciarClave',{'idUsu': id,'token': token}) }}" target="_blank" style="border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 12px; margin: 0; padding: 8px 20px; text-decoration: none; background-color: #3498db; border-color: #3498db; color: #ffffff;">Reestablecer contraseña</a>
+                                        <a href="{{ baseUrl(false) }}{{ urlFor('runValidUsuario',{'idUsu': id,'token': token}) }}" target="_blank" style="border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 12px; margin: 0; padding: 8px 20px; text-decoration: none; background-color: #3498db; border-color: #3498db; color: #ffffff;">Verificar cuenta y acceder</a>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -124,8 +126,8 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Nota: Si usted no ha pedido reestablecer la contraseña y ha recibido este email, ignórelo.</p>
-                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Aténtamente, equipo de La Reforma Santa Fe</p>
+                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Nota: Si usted no ha realizado el registro, y ha recibido este email por error, ignorelo.</p>
+                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">¡Esperamos tus contribuciones! 👏</p>
                       </td>
                     </tr>
                   </table>
