--- a/views/ref/admin/estadisticas.twig
+++ b/views/ref/admin/estadisticas.twig
@@ -1,27 +1,265 @@
-{% extends "ref/side-master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Estadisticas{% endblock %} {% block body %}
-<div class="container-fluid" style=" ">
+{% extends "ref/side-master.twig" %}
+{# ----------------------------------------------------------- #}
+{% block titulo %}Estadisticas{% endblock %}
+{% block linkhead %}
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+{% endblock %}
+{% block body %}
+  <div class="container-fluid" style=" ">
     <div class="row">
-        <div class="col-xs-12 col-md-10 col-lg-8">
-                <h2>Estadisticas
-                </h2>
-                <hr>
-            <table class="table table-striped table-hover ">
-  <thead>
-    <tr>
-      <th>Dato</th>
-      <th>Valor</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Usuarios Registrados</td>
-      <td>{{ usuarios }}</td>
-    </tr>
-  </tbody>
-</table> 
+    <div class="col-xs-12 col-md-11 col-lg-8">
+      <div class="">
+        <h2 class="">
+          <strong>Estadisticas</strong>
+        </h2>
+        <br>
+      </div>
+      <table class="table table-striped table-hover ">
+        <thead>
+          <tr>
+            <th>Dato</th>
+            <th>Valor</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Total de usuarios registrados</td>
+            <td>{{ datosUsuarios.total }}</td>
+          </tr>
+          <tr>
+            <td>Cant. de Usuarios que comentan</td>
+            <td>{{ datosUsuarios.comentadores }}</td>
+          </tr>
+          <tr>
+            <td>Cant. de Comentarios</td>
+            <td>{{ datosComentarios.aportes }}</td>
+          </tr>
+          <tr>
+            <td>Cant. de Respuestas</td>
+            <td>{{ datosComentarios.respuestas }}</td>
+          </tr>
+        </tbody>
+      </table>
+      <hr>
+      <form action="" method="GET">
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <div class="form-group">
+              <div id="datepicker" style="margin: 10px auto 0;"></div>
+              <input id="guardarFecha" hidden="hidden">
+              <input id="fecha-final" name="fechaDesde" type="text" style="display:none;"/>
+            </div>
+            <h5>
+              <b>Fecha Desde</b>
+            </h5>
+            <input id="txt-fecha" type="text" class="form-control" placeholder="Seleccione la fecha" readonly="readonly"/>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <div class="form-group">
+              <div id="datepicker2" style="margin: 10px auto 0;"></div>
+              <input id="guardarFecha2" hidden="hidden">
+              <input id="fecha-final2" name="fechaHasta" type="text" style="display:none;"/>
+            </div>
+            <h5>
+              <b>Fecha Hasta</b>
+            </h5>
+            <input id="txt-fecha2" type="text" class="form-control" placeholder="Seleccione la fecha" readonly="readonly"/>
+          </div>
         </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <br>
+            <button type="submit" class="btn btn-primary btn-block">Buscar todos los eventos</button>
+          </div>
+        </div>
+      </form>
+      {% if datos is not null %}
+        <hr>
+        <h4>Datos estadisticos desde el
+          {{fechaDesde|date('d-m-Y')}}
+          hasta el
+          {{fechaHasta|date('d-m-Y')}}
+          <a href="{{urlFor('shwEstadiTempImpr',{'fechaDesde': fechaDesde, 'fechaHasta': fechaHasta})}}" target="_blank" class="btn btn-info btn-sm pull-right">
+            <i class="fa fa-print fa-lg"></i>
+          </a>
+        </h4>
+        <table class="table table-striped table-hover ">
+          <thead>
+            <tr>
+              <th>Dato</th>
+              <th>Valor</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Total de usuarios registrados</td>
+              <td>{{ datos.usuarios|length }}</td>
+            </tr>
+            <tr>
+              <td>Cant. de Usuarios que comentan</td>
+              <td>{{ datos.aportes|length }}</td>
+            </tr>
+            <tr>
+              <td>Cant. de Respuestas</td>
+              <td>{{ datos.respuestas|length }}</td>
+            </tr>
+            <tr>
+              <td>Votos en Comentarios</td>
+              <td>{{ datos.votosComentarios|length }}</td>
+            </tr>
+          </tbody>
+        </table>
+        <h5>Usuarios registrados</h5>
+        <table class="table table-hover table-condensed">
+          <thead>
+            <tr>
+              <th>Nombre y Apellido</th>
+              <th>
+                <i class="fa fa-user-plus"></i>
+              </th>
+              <th>Email</th>
+              <th>Fecha Nacimiento</th>
+              <th>Localidad</th>
+              <th>Actividad</th>
+              <th>Fecha Registro</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for usuario in datos.usuarios %}
+              <tr>
+                <td><img src="{{ avatarUrl(usuario.img_tipo, usuario.img_hash, 32) }}" class="img-circle" style="width: 20px; margin:0px 5px 0 0" alt="">
+                  {{usuario.nombre}}
+                  {{usuario.apellido}}</td>
+                <td>{{usuario.facebook is null ? '<i class="fa fa-envelope"></i>' : '<i class="fa fa-facebook-square"></i>'}}</td>
+                <td>{{usuario.email is null ? '(Facebook)' : usuario.email}}</td>
+                <td>{{usuario.birthday|date('d-m-Y')}}</td>
+                <td>{{usuario.address}}</td>
+                <td>{{usuario.title}}</td>
+                <td>{{usuario.created_at|date('d-m-Y H:i:s')}}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        {# {% for contenido in contenidos %}
+        {{contenido|json_encode}}
+        <br>
+        {% endfor %} #}
+        <h5>Comentarios</h5>
+        <table class="table table-hover table-condensed">
+          <tbody>
+            {% for comentario in datos.aportes %}
+
+              <tr>
+                <td>
+                  <div class="col-xs-4">
+                    <div class="well well-sm" style="margin-bottom:0;">
+                      {% for seccion in secciones %}
+                        {% if (comentario.comentable_type == 'Seccion') and (comentario.comentable_id == seccion.id)%}
+                          <h6 style="margin-bottom:0;line-height: 14px;font-size:12px; margin-top:0;">
+                            Comentario hecho en eje<br><b>
+                              {% for contenido in contenidos %}
+                              {% for seccionDerecho in contenido.contenible.secciones %}
+                                {{ seccion.id == seccionDerecho.id ? contenido.titulo : ''}}
+                              {% endfor %}
+                              {% endfor %}
+                            </b>
+                          </h6>
+                        {% endif %}
+                      {% endfor %}
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <a href="{{ urlFor('shwUsuario',{'idUsu': comentario.autor.id}) }}">
+                      <img src="{{ avatarUrl(comentario.autor.img_tipo, comentario.autor.img_hash, 32) }}" class="img-circle" style="width: 20px; margin:0px 5px 0 0" alt="">
+                    </a>
+                    <span class="text-info" style="margin-top:0">
+                      <strong>{{ comentario.autor.nombre }}
+                        {{ comentario.autor.apellido }}</strong>
+                    </span>&nbsp;<span style="font-size:11px">
+                      <i>comentó el
+                        {{comentario.created_at|date('d-m-Y H:i')}}
+                        -
+                        <i class="fa fa-thumbs-up"></i>
+                        {{comentario.karma}}</i>
+                    </span>
+                    <br>
+                    <p style="margin-bottom:0; font-size:12px;line-height: 14px;">
+                      {{ comentario.cuerpo|e|nl2br|clickableLinks }}
+                    </p>
+                  </div>
+                </td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        <h5>Respuestas</h5>
+        <table class="table table-hover table-condensed">
+          <tbody>
+            {% for respuesta in datos.respuestas %}
+              <tr>
+                <td>
+                  <a href="{{ urlFor('shwUsuario',{'idUsu': comentario.autor.id}) }}">
+                    <img src="{{ avatarUrl(respuesta.autor.img_tipo, respuesta.autor.img_hash, 32) }}" class="img-circle" style="width: 20px; margin:0px 5px 0 0" alt="">
+                  </a>
+                  <span class="text-info" style="margin-top:0">
+                    <strong>{{ respuesta.autor.nombre }}
+                      {{ respuesta.autor.apellido }}</strong>
+                  </span>&nbsp;<span style="font-size:11px">
+                    <i>respondió el
+                      {{respuesta.created_at|date('d-m-Y H:i')}}
+                      -
+                      <i class="fa fa-thumbs-up"></i>
+                      {{respuesta.karma}}</i>
+                  </span>
+                  <br>
+                  <p style="margin-bottom:0; font-size:12px;line-height: 14px;">
+                    {{ respuesta.cuerpo|e|nl2br|clickableLinks }}
+                  </p>
+                </td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+
+      {% endif %}
     </div>
+  </div>
 </div>
 
-{% endblock body %} {# -------------------------------------------- #} {% block scripts %}
+{% endblock body %}
+{# -------------------------------------------- #}
+{% block scripts %}
+<script src="{{ baseUrl() }}/assets-ref/js/jquery-ui/jquery-ui.min.js"></script>
+<script src="{{ baseUrl() }}/assets-ref/js/jquery-ui/datepicker-es.js"></script>
+<script>
+  $(document).ready(function () {
+    $("#datepicker").datepicker({
+      numberOfMonths: 1,
+      dateFormat: 'DD, dd MM yy',
+      altField: "#guardarFecha",
+      altFormat: "yy-mm-dd",
+      maxDate: 0,
+      onSelect: function () {
+        $('#txt-fecha').val(this.value);
+      }
+    });
+    $("#datepicker2").datepicker({
+      numberOfMonths: 1,
+      dateFormat: 'DD, dd MM yy',
+      altField: "#guardarFecha2",
+      altFormat: "yy-mm-dd",
+      maxDate: 0,
+      onSelect: function () {
+        $('#txt-fecha2').val(this.value);
+      }
+    });
+  });
+
+  $('form').submit(function (e) {
+    var fechaDesde = $("#guardarFecha").val();
+    $('#fecha-final').val(fechaDesde);
+    var fechaHasta = $("#guardarFecha2").val();
+    $('#fecha-final2').val(fechaHasta);
+  })
+</script>
 {% endblock scripts %}
