--- a/views/ref/registro/registro-exito.twig
+++ b/views/ref/registro/registro-exito.twig
@@ -1,7 +1,12 @@
 {% set body_style = 'background-color: #ddf3ff;' %} 
 {% extends "ref/master2.twig" %} 
 {# ----------------------------------------------------------- #} 
-{% block titulo %}Verifique su correo electronico{% endblock %} 
+{% block titulo %}Verifique su correo electronico{% endblock %}
+{% block linkhead %}
+<script>
+gtag('event', 'registroExitoso');
+</script>
+{% endblock %}
 {% block body %}
 <div class="registro-panel">
 <div class="container">
