--- a/views/ref/registro/reiniciar-clave.twig
+++ b/views/ref/registro/reiniciar-clave.twig
@@ -1,5 +1,11 @@
 {% set body_style = 'background-color: #ddf3ff;' %} {% extends "ref/master2.twig" %} {# -----------------------------------------------------------
-#} {% block titulo %}Reiniciar contraseña{% endblock %} {% block body %}
+#} 
+{% block linkhead %}
+  <script>
+    gtag('event', 'reestablecerPasswordSolicitado');
+  </script>
+{% endblock %}
+{% block titulo %}Reiniciar contraseña{% endblock %} {% block body %}
 <div class="registro-panel">
 	<div class="container">
 		<div class="row">
