--- a/views/email/registro.twig
+++ b/views/email/registro.twig
@@ -1,3 +1,177 @@
-Bienvenido al portal para participar en las Bases para la Reforma del Gobierno de Santa Fe. 
-Ingresá a este link para confirmar tu email 
-{{ baseUrl(false) }}{{ urlFor('runValidUsuario',{'idUsu': id,'token': token}) }}
+<!doctype html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Registro - La Reforma Santa Fe</title>
+    <style>
+      @media only screen and (max-width: 620px) {
+        table[class=body] h1 {
+          font-size: 22px !important;
+          margin-bottom: 10px !important;
+        }
+
+        table[class=body] a,
+        table[class=body] ol,
+        table[class=body] p,
+        table[class=body] span,
+        table[class=body] td,
+        table[class=body] ul {
+          font-size: 12px !important;
+        }
+
+        table[class=body] .article,
+        table[class=body] .wrapper {
+          padding: 10px !important;
+        }
+
+        table[class=body] .content {
+          padding: 0 !important;
+        }
+
+        table[class=body] .container {
+          padding: 0 !important;
+          width: 100% !important;
+        }
+
+        table[class=body] .main {
+          border-left-width: 0 !important;
+          border-radius: 0 !important;
+          border-right-width: 0 !important;
+        }
+
+        table[class=body] .btn table {
+          width: 100% !important;
+        }
+
+        table[class=body] .btn a {
+          width: 100% !important;
+        }
+
+        table[class=body] .img-responsive {
+          height: auto !important;
+          max-width: 100% !important;
+          width: auto !important;
+        }
+      }
+      @media all {
+        .ExternalClass {
+          width: 100%;
+        }
+
+        .ExternalClass,
+        .ExternalClass div,
+        .ExternalClass font,
+        .ExternalClass p,
+        .ExternalClass span,
+        .ExternalClass td {
+          line-height: 100%;
+        }
+
+        .apple-link a {
+          color: inherit !important;
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          text-decoration: none !important;
+        }
+
+        .btn-primary table td:hover {
+          background-color: #34495e !important;
+        }
+
+        .btn-primary a:hover {
+          background-color: #34495e !important;
+          border-color: #34495e !important;
+        }
+      }
+    </style>
+  </head>
+  <body class="" style="background-color: #003f5b; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 12px; line-height: 1.4; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
+    <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; background-color: #003f5b; width: 100%;" width="100%" bgcolor="#003f5b">
+      <tr>
+        <td style="font-family: sans-serif; font-size: 12px; vertical-align: top;" valign="top">&nbsp;</td>
+        <td class="container" style="font-family: sans-serif; font-size: 12px; vertical-align: top; display: block; max-width: 580px; padding: 10px; width: 580px; Margin: 0 auto;" width="580" valign="top">
+          <div class="content" style="box-sizing: border-box; display: block; Margin: 0 auto; max-width: 580px; padding: 10px;">
+
+            <!-- START CENTERED WHITE CONTAINER -->
+            <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Este email fue enviado porque se ha registrado en la plataforma de participación de La Reforma Santa Fe</span>
+            <table class="main" style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; background: #ffffff; border-radius: 3px; width: 100%;" width="100%">
+
+              <!-- START MAIN CONTENT AREA -->
+              <tr>
+                <td class="wrapper" style="font-family: sans-serif; font-size: 12px; vertical-align: top; box-sizing: border-box; padding: 20px;" valign="top">
+                  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; width: 100%;" width="100%">
+                    <tr>
+                      <td style="font-family: sans-serif; font-size: 12px; vertical-align: top;" valign="top">
+                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><img src="http://lareformasantafe.digital/participa/public/assets-ref/img/sf-ref-logo-mail.png" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; width: 150px;" alt="" width="150"></p>
+                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">¡Te damos la bienvenida a La Reforma Santa Fe!
+                        </p>
+                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">¡Gracias por tu interés en participar! Para comenzar, necesitamos verificar tu cuenta. Para eso, hace clic en el siguiente botón y poder comenzar a participar en nuestra nueva constitución</p>
+                        <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; box-sizing: border-box; width: 100%;" width="100%">
+                          <tbody>
+                            <tr>
+                              <td align="left" style="font-family: sans-serif; font-size: 12px; vertical-align: top; padding-bottom: 15px;" valign="top">
+                                <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; width: auto;">
+                                  <tbody>
+                                    <tr>
+                                      <td style="font-family: sans-serif; font-size: 12px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #3498db;" valign="top" align="center" bgcolor="#3498db">
+                                        <a href="{{ baseUrl(false) }}{{ urlFor('runValidUsuario',{'idUsu': id,'token': token}) }}" target="_blank" style="border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 12px; margin: 0; padding: 8px 20px; text-decoration: none; background-color: #3498db; border-color: #3498db; color: #ffffff;">Verificar cuenta y acceder</a>
+                                      </td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Nota: Si usted no ha realizado el registro, y ha recibido este email por error, ignórelo.</p>
+                        <p style="font-family: sans-serif; font-size: 12px; font-weight: normal; margin: 0; Margin-bottom: 15px;">¡Esperamos tus contribuciones! 👏</p>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+
+              <!-- END MAIN CONTENT AREA -->
+            </table>
+
+            <!-- START FOOTER -->
+            <div class="footer" style="clear: both; Margin-top: 10px; text-align: center; width: 100%;">
+              <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; width: 100%;" width="100%">
+                <tr>
+                  <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; color: #FFFFFF; font-size: 10px; text-align: center;" valign="top" align="center">
+                    <span class="apple-link" style="color: #FFFFFF; font-size: 10px; text-align: center;">Este email fue generado desde la plataforma de participación de
+                      <a href="http://lareformasantafe.digital/" style="text-decoration: underline; color: #FFFFFF; font-size: 10px; text-align: center;">La Reforma Santa Fe</a>, del Gobierno de la Provincia de Santa Fe. Si usted no realizó un registro o pidió un cambio de contraseña, ignore este email, y si persiste el problema, contactese en
+                      <u>
+                        <a href="mailto:lareformasantafe@gmail.com" style="text-decoration: underline; color: #FFFFFF; font-size: 10px; text-align: center;">lareformasantafe@gmail.com</a>
+                      </u>
+                    </span>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; color: #FFFFFF; font-size: 10px; text-align: center;" valign="top" align="center">
+                    La plataforma de participación fue realizado por
+                    <u>
+                      <a href="http://virtuagora.org" style="color: #FFFFFF; font-size: 10px; text-align: center; text-decoration: none;">Virtuágora</a>
+                    </u><br>Plataforma web de participación ciudadana.
+                  </td>
+                </tr>
+                <tr>
+                  <td style="font-family: sans-serif; vertical-align: top; color: #FFFFFF; font-size: 10px; text-align: center;" valign="top" align="center">
+                    <p style="font-family: sans-serif; font-weight: normal; margin: 0; Margin-bottom: 15px; color: #FFFFFF; font-size: 10px; text-align: center;"><img src="http://lareformasantafe.digital/participa/public/assets-ref/img/virtuagora-logo-white.png" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; width: 100px;" alt="" width="100"></p>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <!-- END FOOTER -->
+
+            <!-- END CENTERED WHITE CONTAINER -->
+          </div>
+        </td>
+        <td style="font-family: sans-serif; font-size: 12px; vertical-align: top;" valign="top">&nbsp;</td>
+      </tr>
+    </table>
+  </body>
+</html>
