--- a/views/ref/menu-side.twig
+++ b/views/ref/menu-side.twig
@@ -16,13 +16,19 @@
 		<li>
 			<a href="{{urlFor('shwCrearDerecho')}}" style="font-weight:600;">Nuevo <b>Eje</b></a>
 		</li>
+<li style="line-height:normal;color:#FFF;font-size:11px; text-indent:0; padding-left:20px; padding-right:10px;">¡DANGER ZONE! Recomendamos no utilizar ligeramente esta seccion</li>
+		
 		<li>
 			<a href="{{urlFor('shwModificarEjes')}}" style="font-weight:600;">Modificar <b>Ejes</b></a>
 		</li>
+<li style="line-height:normal;color:#FFF;font-size:11px; text-indent:0; padding-left:20px; padding-right:10px;">¡DANGER ZONE! Recomendamos no utilizar ligeramente esta seccion</li>
+		
 		<hr>
 		<li>
 			<a href="{{ urlFor('shwCrearModerad') }}" style="font-weight:600;">Moderadores</a>
 		</li>
+<li style="line-height:normal;color:#FFF;font-size:11px; text-indent:0; padding-left:20px; padding-right:10px;">¡DANGER ZONE! Recomendamos no utilizar ligeramente esta seccion</li>
+		
 		{#<li>
 			<a href="{{ urlFor('shwCrearImagen') }}">Imagenes</a>
 		</li>
@@ -33,8 +39,14 @@
 			<a href="{{ urlFor('shwEstadi') }}" style="font-weight:600;">Estadisticas</a>
 		</li>
 		<li>
+			<a href="https://analytics.google.com" style="font-weight:600;">Google Analytics</a>
+		</li>
+<li style="line-height:normal;color:#FFF;font-size:11px; text-indent:0; padding-left:20px; padding-right:10px;">Para google analytics requiere solicitar acceso. Cuenta habilitada: lareformasantafe@gmail.com</li>
+		<li>
 			<a href="{{ urlFor('shwExportar') }}" style="font-weight:600;">Exportar</a>
 		</li>
+<li style="line-height:normal;color:#FFF;font-size:11px; text-indent:0; padding-left:20px; padding-right:10px;">Lista de emails, Lista de comentarios.</li>
+		
 		<li>
 			<a href="{{urlFor('shwIndex')}}"><i class="fa fa-reply fa-lg" style="display:inline;"></i> Volver</a>
 		</li>
