--- a/views/ref/registro/reiniciar-completo.twig
+++ b/views/ref/registro/reiniciar-completo.twig
@@ -2,6 +2,11 @@
 {% extends "ref/master2.twig" %} 
 {# ----------------------------------------------------------- #} 
 {% block titulo %}Contraseña reiniciada{% endblock %} 
+{% block linkhead %}
+  <script>
+    gtag('event', 'passwordReestablecido');
+  </script>
+{% endblock %}
 {% block body %}
 <div class="registro-panel">
 <div class="container">
