--- a/views/ref/side-master-user.twig
+++ b/views/ref/side-master-user.twig
@@ -15,18 +15,33 @@
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ baseUrl() }}/assets-ref/img/favicon/72.png">
 	<!-- For iPad Retina display -->
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ baseUrl() }}/assets-ref/img/favicon/144.png">
-	{% block opengraph %}
-	<meta property="og:url" content="{{ baseUrl() }}" />
-	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Bases para la Reforma" />
-	<meta property="og:site_name" content="Bases para la Reforma" />
-	<meta property="og:description" content="La Constitución es la ley fundamental de un Estado, la de más alto rango en el ordenamiento político y jurídico, y con la cual deben guardar coherencia el resto de las leyes.
-Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la" />
-	<meta property="og:image" content="" /> {% endblock %}
-	<title>{% block titulo %}{% endblock titulo %} - Bases para la Reforma</title>
+	    {% block opengraph %}
+<meta content="http://lareformasantafe.digital/participa/public" property="og:url"/>
+<meta content="website" property="og:type"/>
+<meta content='Los tiempos cambian - La Reforma Santa Fe' property="og:title"/>
+<meta content="Los tiempos cambian. Es tiempo de reforma, de debate público y fundamentalmente de participación ciudadana. No sólo cambiaron muchas cosas, sino que conquistamos un montón de derechos. Que estén en nuestra Constitución, significa no perderlos en el futuro." property="og:description"/>
+<meta content="Los tiempos cambian. Es tiempo de reforma, de debate público y fundamentalmente de participación ciudadana. No sólo cambiaron muchas cosas, sino que conquistamos un montón de derechos. Que estén en nuestra Constitución, significa no perderlos en el futuro." name="description"/>
+<meta name="google" content="notranslate"/>
+<meta content="{{ baseUrl() }}/assets-ref/img/sta-fe-refomr-aimg.jpg" property="og:image"/>
+<meta content="summary_large_image" name="twitter:card"/>
+<meta content="@laReformaSF" name="twitter:site"/>
+<meta content="@laReformaSF" name="twitter:creator"/>
+    {% endblock %}
+	<title>
+      {% block titulo %}{% endblock titulo %} - La Reforma Santa Fe</title>
 
 	{% block linkhead %}{% endblock %}
 	<link href="{{ baseUrl() }}/assets-ref/css/virtuagora-ref-side.css" rel="stylesheet">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-73061346-11"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-73061346-11');
+</script>
+
 </head>
 <body >
 	<div id="wrapper">
