--- a/views/ref/test.twig
+++ b/views/ref/test.twig
@@ -1,38 +1,4 @@
 {% set body_style = 'background-color: #ddf3ff;' %} {% extends "ref/master2.twig" %} {# -----------------------------------------------------------
-#} {% block titulo %}Reiniciar contraseña{% endblock %} {% block body %}
-<div class="registro-panel">
-	<div class="container">
-		<div class="row">
-			<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-				<h2 class="black gris">Reiniciar contraseña</h2>
-				<div class="well well-lg">
-					<form action="{{ urlFor('runReiniciarClave',{'idUsu': idUsu,'token': token}) }}" method="POST" class="form-horizontal" data-toggle="validator">
-						<fieldset>
-							<div class="form-group">
-								<label for="inputPassword" class="col-md-2 control-label">Contraseña</label>
-								<div class="col-md-10">
-									<input name="password" type="password" placeholder="Escriba aquí su contraseña" id="inputPassword" class="form-control" data-error="Complete el campo con una contraseña"
-													required>
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-md-2 control-label"></label>
-								<div class="col-md-10">
-									<input name="password2" type="password" placeholder="Reingrese su contraseña" class="form-control" data-match="#inputPassword"
-													data-error="Reingrese la contraseña que ha ingresado en el campo anterior" data-match-error="Las contraseñas no son iguales. Revisé"
-													required>
-									<div class="help-block with-errors"></div>
-								</div>
-							</div>
-						</fieldset>
-						<div class="text-center">
-							<button type="submit" class="btn btn-red btn-block">Reiniciar contraseña<i class="zmdi zmdi-shield-check zmdi-hc-lg zmdi-hc-fw"></i></button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+#} {% block titulo %}Test{% endblock %} {% block body %}
 {% endblock %} {# ----------------------------------------------------------- #} {% block scripts %}
 <script src="{{ baseUrl() }}/assets-lpe/js/validator.min.js"></script> {% endblock %}
