--- a/views/ref/side-master.twig
+++ b/views/ref/side-master.twig
@@ -47,14 +47,14 @@
 	<div id="wrapper">
 		{% include 'ref/menu-side.twig' %}
 		<div id="page-content-wrapper">
-			{# <div class="container-fluid">
+			<div class="container-fluid hidden-sm hidden-md hidden-lg">
 				<div class="row">
 					<div class="col-xs-12 col-md-10 col-lg-8">
 
 			<a href="#menu-toggle" class="btn btn-default bt-xs" id="menu-toggle"><i class="fa fa-bars fa-fw fa-lg"></i>Menu</a>
 					</div>
 				</div>
-			</div> #}
+			</div>
 		{% block body %}{% endblock %}
 		</div>
 	</div>
